apps/nats/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats-jetstream
  labels:
    app: nats-jetstream
spec:
  serviceName: nats-jetstream
  replicas: 1
  selector:
    matchLabels: &labels
      app: nats-jetstream
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        fsGroup: 10000
      containers:
        - name: nats-jetstream
          image: nats:2.12.7-alpine
          imagePullPolicy: IfNotPresent
          securityContext: &containerSecurity
            allowPrivilegeEscalation: false
            runAsUser: 10001
            runAsGroup: 10000
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          args:
            - -D
            - --jetstream
            - --port=4222
            - --store_dir=/data/natsData
            - --config=/etc/nats-jetstream/jetstream.conf
          # Required to be able to define an environment variable
          # that refers to other environment variables.  This env var
          # is later used as part of the configuration file.
          ports:
            - containerPort: 7422
              name: leafnodes
            - containerPort: 6222
              name: cluster
            - containerPort: 8080
              name: ws-client
              protocol: TCP
            - containerPort: 4222
              name: tcp-client
              protocol: TCP
            - containerPort: 8222
              name: monitoring
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: nats-data
            - name: pid
              mountPath: /var/run/nats
            - mountPath: /etc/nats-jetstream/
              name: config-volume
          resources:
            requests:
              cpu: "250m"
            limits:
              memory: "1G"
        #################################
        #                               #
        #  NATS Prometheus Exporter     #
        #                               #
        #################################
        - name: nats-exporter
          image: natsio/prometheus-nats-exporter:0.19.2
          imagePullPolicy: IfNotPresent
          securityContext: *containerSecurity
          args:
            - -varz
            - -jsz=all
            - http://localhost:8222/
          ports:
            - containerPort: 7777
              name: metrics
      volumes:
        - configMap:
            name: nats-jetstream
          name: config-volume
        - name: pid
          emptyDir: {}
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: control-plane-01
  volumeClaimTemplates:
    - metadata:
        name: nats-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: "10Gi"
