apps/nats/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nats-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - nats.home.alden.ai
  rules:
  - backendRefs:
    - name: nats
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
